2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/IOverloadedCompletionData.cs: Move
	overloading functionality into an IOverloadedCompletionData interface
	so that ICompletionData implementors that want overloads do not have
	to subclass CodeCompletionData, and can customise overloading
	behaviour.

	* Makefile.am:
	* MonoDevelop.Projects.Gui.mdp: Updated.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs: Track API.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Re-implement sinking obsolete members to the bottom, but in a
	  non-broken way this time.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: now '<' is a
	  autocomplete char too.

2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Gui/ProjectsGuiServices.cs,
	  MonoDevelop.Projects.Gui/IconService.cs: Track removal of service
	  APIs.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs,
	  MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs,
	  MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
	  Completion data now implements IComparable.

2008-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Custom commands are not supported
	  at solution level.
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Hide the
	  completion list if there is nothing to show.
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs: Minor
	  allocation optimization.
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs: